# devarch

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release-artifacts.yml
devarch/: __init__.py  __main__.py  models.py  plugins.py
devarch/analyzers/: __init__.py  ancient.py  dead_code.py  duplicates.py  health.py  maintenance.py  monsters.py  recovery.py  ruins.py  suspicious.py  todos.py
devarch/cli/: __init__.py  main.py
devarch/reports/: __init__.py  exporters.py
devarch/scanner/: core.py  discovery.py  intelligence.py
devarch/utils/: __init__.py  fs.py  git_info.py  rich_ui.py
scripts/: build_release.py
tests/: test_analyzers.py  test_cli.py  test_intelligence.py
